--- a/src/app/components/user/home/home.component.html
+++ b/src/app/components/user/home/home.component.html
@@ -3,7 +3,7 @@
     <div class="items-start justify-center m-auto max-w-3xl p-9 flex-grow">
         <div class="flex items-stretch mt-10 justify-center">
             <div class="shadow sm:rounded-md sm:overflow-hidden">
-                <div class="px-4 py-5 bg-white space-y-6 sm:p-6 bg-gray-800 text-white">
+                <div class="px-4 py-5 space-y-6 sm:p-6 bg-gray-800 text-white">
                     <div class="grid grid-flow-col gap-3">
                         <div class="col-span-2">
                             <h3 class="text-lg font-medium leading-6">Welcome to Quizz!</h3>
@@ -32,7 +32,7 @@
             </div>
         </div>
         <div
-            class="p-4 w-full text-center bg-white rounded-lg border shadow-md sm:p-8 dark:bg-gray-800 dark:border-gray-700 mt-20">
+            class="p-4 w-full text-center rounded-lg border shadow-md sm:p-8 bg-gray-800 border-gray-700 mt-20">
             <h5 class="mb-2 text-3xl font-bold text-gray-900 dark:text-white">Work fast from anywhere</h5>
             <p class="mb-5 text-base text-gray-500 sm:text-lg dark:text-gray-400">Stay up to date and move work forward
                 with Quizz on iOS & Android. Download the app today.</p>
